fixing the update csv

--- a/update_scores.html
+++ b/update_scores.html
@@ -50,7 +50,7 @@
                 const actualResultsRows = actualResultsData.split('\n').map(row => row.split(',')).slice(0, 49);
 
                 for (const participant of participants.participants) {
-                    let participantCSV = 'date,team 1,predicted score 1,team 2,predicted score 2,score\n';
+                    let participantCSV = '';
 
                     const csvResponse = await fetch(participant.file);
                     const csvData = await csvResponse.text();
