--- a/update_scores.html
+++ b/update_scores.html
@@ -47,7 +47,7 @@
 
                 const actualResultsResponse = await fetch('./results_csv/Actual_Results.csv');
                 const actualResultsData = await actualResultsResponse.text();
-                const actualResultsRows = actualResultsData.split('\n').map(row => row.split(',')).slice(0, 49);
+                const actualResultsRows = actualResultsData.split('\n').map(row => row.split(','));
 
                 for (const participant of participants.participants) {
                     let participantCSV = '';
@@ -56,7 +56,9 @@
                     const csvData = await csvResponse.text();
                     const participantRows = csvData.split('\n').map(row => row.split(','));
 
-                    for (const row of actualResultsRows) {
+                    // Process the first 49 rows
+                    for (let i = 0; i < 49; i++) {
+                        const row = actualResultsRows[i];
                         if (!row[0]) {
                             participantCSV += '\n';
                             continue; // Keep empty lines in output
@@ -104,6 +106,28 @@
                             }
                         }
                         participantCSV += `${date},${team1},${predictedScore1},${team2},${predictedScore2},${participantScore}\n`;
+                    }
+
+                    // Process rows 50 to 59 for Round of 16
+                    for (let i = 49; i < 59; i++) {
+                        const row = actualResultsRows[i];
+                        if (!row[0]) {
+                            participantCSV += '\n';
+                            continue; // Keep empty lines in output
+                        }
+
+                        const team1 = row[0] || '';
+                        const team2 = row[1] || '';
+
+                        let participantScore = 0;
+
+                        for (const pRow of participantRows) {
+                            if ((pRow.includes(team1) && pRow.includes(team2)) || (pRow.includes(team2) && pRow.includes(team1))) {
+                                participantScore = 10;
+                                break;
+                            }
+                        }
+                        participantCSV += `${team1},${team2},${participantScore}\n`;
                     }
 
                     const participantNameForFilename = participant.name.replace(/ /g, '_');
