fixing the update csv

--- a/update_scores.html
+++ b/update_scores.html
@@ -128,7 +128,7 @@
                                 }
                             }
                         }
-                        participantCSV += `${date},${predictedTeam1},${predictedTeam2},${predictedWinner},${score}\n`;
+                        participantCSV += `${date},${predictedTeam1},${predictedTeam2},${predictedWinner},,${score}\n`;
                     }
 
                     const participantNameForFilename = participant.name.replace(/ /g, '_');
