--- a/update_scores.html
+++ b/update_scores.html
@@ -256,6 +256,26 @@
                         participantCSV += `${date},${team1},${predictedScore1},${team2},${predictedScore2},${participantScore}\n`;
                     }
 
+                    // Process lines 68 to 69
+                    for (let i = 67; i < 69; i++) {
+                        const row = participantRows[i];
+                        const date = row[0];
+                        const predictedTeam1 = row[1];
+                        const predictedTeam2 = row[2];
+                        const predictedWinner = row[3];
+                        let score = '';
+
+                        if (predictedWinner) {
+                            const actualResultRow = actualResultsRows[71]; // Row 72 in the file (0-based index 71)
+                            if (actualResultRow.includes(predictedWinner)) {
+                                score = 60;
+                            } else {
+                                score = 0;
+                            }
+                        }
+                        participantCSV += `${date},${predictedTeam1},${predictedTeam2},${predictedWinner},${score}\n`;
+                    }
+
                     const participantNameForFilename = participant.name.replace(/ /g, '_');
                     downloadCSV(participantCSV, `${participantNameForFilename}_scores.csv`);
                 }
