--- a/group_stage_result.html
+++ b/group_stage_result.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,15 +12,18 @@
             background-color: #1e1e1e;
             color: #7c7a7a;
         }
+
         .logo-container {
             display: flex;
             justify-content: center;
             margin-bottom: 20px;
         }
+
         .dropdown-container {
             text-align: center;
             margin-top: 20px;
         }
+
         select {
             width: 200px;
             background-color: #6b6a6a;
@@ -28,6 +32,7 @@
             margin: 10px;
             height: 36px;
         }
+
         button {
             background-color: #fff;
             color: #000;
@@ -37,40 +42,53 @@
             cursor: pointer;
             height: 36px;
         }
+
         table {
             width: 100%;
             border-collapse: collapse;
             margin-top: 20px;
         }
-        table, th, td {
+
+        table,
+        th,
+        td {
             border: 1px solid black;
         }
-        th, td {
+
+        th,
+        td {
             padding: 8px;
             text-align: center;
         }
+
         th {
             background-color: #333333;
         }
+
         th:first-child {
             width: 35%;
         }
+
         th[colspan="2"] {
             width: calc(65% / 3);
         }
+
         .center {
             text-align: center;
             margin-top: 20px;
         }
+
         .center h2 {
             display: inline-block;
             margin: 0;
         }
+
         .center img {
             vertical-align: middle;
         }
     </style>
 </head>
+
 <body>
     <div class="logo-container">
         <img src="./logos/logo.png" alt="Euro 2024 Logo" style="width:200px;">
@@ -285,4 +303,5 @@
         }
     </script>
 </body>
+
 </html>
