--- a/update_scores.html
+++ b/update_scores.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,15 +12,18 @@
             background-color: #1e1e1e;
             color: #7c7a7a;
         }
+
         .logo-container {
             display: flex;
             justify-content: center;
             margin-bottom: 20px;
         }
+
         .center {
             text-align: center;
             margin-top: 20px;
         }
+
         button {
             background-color: #fff;
             color: #000;
@@ -31,6 +35,7 @@
         }
     </style>
 </head>
+
 <body>
     <div class="logo-container">
         <img src="./logos/logo.png" alt="Euro 2024 Logo" style="width:200px;">
@@ -90,13 +95,13 @@
                                     if (predicted1 === actual1 && predicted2 === actual2) {
                                         participantScore = 10;
                                     } else if ((actual1 - actual2 === predicted1 - predicted2) &&
-                                               ((actual1 > actual2 && predicted1 > actual2) || 
-                                                (actual1 < actual2 && predicted1 < actual2))) {
+                                        ((actual1 > actual2 && predicted1 > actual2) ||
+                                            (actual1 < actual2 && predicted1 < actual2))) {
                                         participantScore = 8;
                                     } else if (actual1 === actual2 && predicted1 === predicted2) {
                                         participantScore = 5;
-                                    } else if ((actual1 > actual2 && predicted1 > actual2) || 
-                                               (actual1 < actual2 && predicted1 < actual2)) {
+                                    } else if ((actual1 > actual2 && predicted1 > actual2) ||
+                                        (actual1 < actual2 && predicted1 < actual2)) {
                                         participantScore = 5;
                                     } else {
                                         participantScore = 0;
@@ -111,6 +116,7 @@
                     // Process lines 52 to 59
                     for (let i = 51; i < 59; i++) {
                         const row = participantRows[i];
+                        if (!row) continue;
                         const date = row[0];
                         const predictedTeam1 = row[1];
                         const predictedTeam2 = row[2];
@@ -131,6 +137,7 @@
                         participantCSV += `${date},${predictedTeam1},${predictedTeam2},${predictedWinner},${score}\n`;
                     }
 
+                    // Process lines 60 to 61
                     for (let i = 59; i < 61; i++) {
                         const row = actualResultsRows[i];
                         if (!row[0]) {
@@ -164,13 +171,13 @@
                                     if (predicted1 === actual1 && predicted2 === actual2) {
                                         participantScore = 10;
                                     } else if ((actual1 - actual2 === predicted1 - predicted2) &&
-                                               ((actual1 > actual2 && predicted1 > actual2) || 
-                                                (actual1 < actual2 && predicted1 < actual2))) {
+                                        ((actual1 > actual2 && predicted1 > actual2) ||
+                                            (actual1 < actual2 && predicted1 < actual2))) {
                                         participantScore = 8;
                                     } else if (actual1 === actual2 && predicted1 === predicted2) {
                                         participantScore = 5;
-                                    } else if ((actual1 > actual2 && predicted1 > actual2) || 
-                                               (actual1 < actual2 && predicted1 < actual2)) {
+                                    } else if ((actual1 > actual2 && predicted1 > actual2) ||
+                                        (actual1 < actual2 && predicted1 < actual2)) {
                                         participantScore = 5;
                                     } else {
                                         participantScore = 0;
@@ -185,6 +192,7 @@
                     // Process lines 62 to 65
                     for (let i = 61; i < 65; i++) {
                         const row = participantRows[i];
+                        if (!row) continue;
                         const date = row[0];
                         const predictedTeam1 = row[1];
                         const predictedTeam2 = row[2];
@@ -205,6 +213,7 @@
                         participantCSV += `${date},${predictedTeam1},${predictedTeam2},${predictedWinner},${score}\n`;
                     }
 
+                    // Process lines 66 to 67
                     for (let i = 65; i < 67; i++) {
                         const row = actualResultsRows[i];
                         if (!row[0]) {
@@ -238,13 +247,13 @@
                                     if (predicted1 === actual1 && predicted2 === actual2) {
                                         participantScore = 10;
                                     } else if ((actual1 - actual2 === predicted1 - predicted2) &&
-                                               ((actual1 > actual2 && predicted1 > actual2) || 
-                                                (actual1 < actual2 && predicted1 < actual2))) {
+                                        ((actual1 > actual2 && predicted1 > actual2) ||
+                                            (actual1 < actual2 && predicted1 < actual2))) {
                                         participantScore = 8;
                                     } else if (actual1 === actual2 && predicted1 === predicted2) {
                                         participantScore = 5;
-                                    } else if ((actual1 > actual2 && predicted1 > actual2) || 
-                                               (actual1 < actual2 && predicted1 < actual2)) {
+                                    } else if ((actual1 > actual2 && predicted1 > actual2) ||
+                                        (actual1 < actual2 && predicted1 < actual2)) {
                                         participantScore = 5;
                                     } else {
                                         participantScore = 0;
@@ -259,6 +268,7 @@
                     // Process lines 68 to 69
                     for (let i = 67; i < 69; i++) {
                         const row = participantRows[i];
+                        if (!row) continue;
                         const date = row[0];
                         const predictedTeam1 = row[1];
                         const predictedTeam2 = row[2];
@@ -276,6 +286,7 @@
                         participantCSV += `${date},${predictedTeam1},${predictedTeam2},${predictedWinner},${score}\n`;
                     }
 
+                    // Process lines 70 to 71
                     for (let i = 69; i < 71; i++) {
                         const row = actualResultsRows[i];
                         if (!row[0]) {
@@ -309,13 +320,13 @@
                                     if (predicted1 === actual1 && predicted2 === actual2) {
                                         participantScore = 10;
                                     } else if ((actual1 - actual2 === predicted1 - predicted2) &&
-                                               ((actual1 > actual2 && predicted1 > actual2) || 
-                                                (actual1 < actual2 && predicted1 < actual2))) {
+                                        ((actual1 > actual2 && predicted1 > actual2) ||
+                                            (actual1 < actual2 && predicted1 < actual2))) {
                                         participantScore = 8;
                                     } else if (actual1 === actual2 && predicted1 === predicted2) {
                                         participantScore = 5;
-                                    } else if ((actual1 > actual2 && predicted1 > actual2) || 
-                                               (actual1 < actual2 && predicted1 < actual2)) {
+                                    } else if ((actual1 > actual2 && predicted1 > actual2) ||
+                                        (actual1 < actual2 && predicted1 < actual2)) {
                                         participantScore = 5;
                                     } else {
                                         participantScore = 0;
@@ -327,25 +338,21 @@
                         participantCSV += `${date},${team1},${predictedScore1},${team2},${predictedScore2},${participantScore}\n`;
                     }
 
-
                     // Process line 72
-                    const row = participantRows[71]; // Row 72 in the file (0-based index 71)
-                    const date = row[0];
-                    const predictedTeam1 = row[1];
-                    const predictedTeam2 = row[2];
-                    const predictedWinner = row[3];
-                    let score = '';
-
-                    if (predictedWinner) {
+                    let line72PredictedPlayer = participantRows[71][1];
+                    let line72Date = participantRows[71][0];
+                    let line72Score = '';
+                    if (line72PredictedPlayer) {
                         const actualResultRow = actualResultsRows[71]; // Row 72 in the file (0-based index 71)
-                        if (actualResultRow[3] && actualResultRow[3].includes(predictedWinner)) {
-                            score = 80;
+                        if (actualResultRow[3] && actualResultRow[3].includes(line72PredictedPlayer)) {
+                            line72Score = 80;
                         } else {
-                            score = 0;
+                            line72Score = 0;
                         }
                     }
-                    participantCSV += `${date},${predictedTeam1},${predictedTeam2},${predictedWinner},${score}\n`;
+                    participantCSV += `${line72Date},${line72PredictedPlayer},${line72Score}\n`;
 
+                    // Process lines 73 to 74
                     for (let i = 72; i < 74; i++) {
                         const row = actualResultsRows[i];
                         if (!row[0]) {
@@ -379,13 +386,13 @@
                                     if (predicted1 === actual1 && predicted2 === actual2) {
                                         participantScore = 10;
                                     } else if ((actual1 - actual2 === predicted1 - predicted2) &&
-                                               ((actual1 > actual2 && predicted1 > actual2) || 
-                                                (actual1 < actual2 && predicted1 < actual2))) {
+                                        ((actual1 > actual2 && predicted1 > actual2) ||
+                                            (actual1 < actual2 && predicted1 < actual2))) {
                                         participantScore = 8;
                                     } else if (actual1 === actual2 && predicted1 === predicted2) {
                                         participantScore = 5;
-                                    } else if ((actual1 > actual2 && predicted1 > actual2) || 
-                                               (actual1 < actual2 && predicted1 < actual2)) {
+                                    } else if ((actual1 > actual2 && predicted1 > actual2) ||
+                                        (actual1 < actual2 && predicted1 < actual2)) {
                                         participantScore = 5;
                                     } else {
                                         participantScore = 0;
@@ -397,38 +404,24 @@
                         participantCSV += `${date},${team1},${predictedScore1},${team2},${predictedScore2},${participantScore}\n`;
                     }
 
-                    if (line75PredictedPlayer) {
-                        const actualResultRow = actualResultsRows[74]; // Row 75 in the file (0-based index 74)
-                        if (actualResultRow[1] && actualResultRow[1].includes(line75PredictedPlayer)) {
-                            line75Score = 80;
-                        } else {
-                            line75Score = 0;
+                    // Process lines 75 to 77
+                    for (let i = 74; i < 77; i++) {
+                        const row = participantRows[i];
+                        if (!row) continue;
+                        const date = row[0];
+                        const predictedPlayer = row[1];
+                        let score = '';
+
+                        if (predictedPlayer) {
+                            const actualResultRow = actualResultsRows[i];
+                            if (actualResultRow[1] && actualResultRow[1].includes(predictedPlayer)) {
+                                score = 80;
+                            } else {
+                                score = 0;
+                            }
                         }
+                        participantCSV += `${date},${predictedPlayer},${score}\n`;
                     }
-                    participantCSV += `${line75Date},${line75PredictedPlayer},${line75Score}\n`;
-
-                    if (line76PredictedPlayer) {
-                        const actualResultRow = actualResultsRows[75]; // Row 76 in the file (0-based index 75)
-                        if (actualResultRow[1] && actualResultRow[1].includes(line76PredictedPlayer)) {
-                            line76Score = 80;
-                        } else {
-                            line76Score = 0;
-                        }
-                    }
-                    participantCSV += `${line76Date},${line76PredictedPlayer},${line76Score}\n`;
-
-                    if (line77PredictedPlayer) {
-                        const actualResultRow = actualResultsRows[76]; // Row 77 in the file (0-based index 76)
-                        if (actualResultRow[1] && actualResultRow[1].includes(line77PredictedPlayer)) {
-                            line77Score = 80;
-                        } else {
-                            line77Score = 0;
-                        }
-                    }
-                    participantCSV += `${line77Date},${line77PredictedPlayer},${line77Score}\n`;
-
-
-
 
                     const participantNameForFilename = participant.name.replace(/ /g, '_');
                     downloadCSV(participantCSV, `${participantNameForFilename}_scores.csv`);
@@ -451,4 +444,5 @@
         }
     </script>
 </body>
+
 </html>
