--- a/update_scores.html
+++ b/update_scores.html
@@ -354,7 +354,7 @@
                             score = 0;
                         }
                     }
-                    participantCSV += `${date},${predictedTeam1},${predictedTeam2},${predictedWinner},${score}\n`;
+                    participantCSV += `${date},${predictedTeam1},${predictedTeam2},${predictedWinner},,${score}\n`;
 
                     // Process lines 73 to 74
                     for (let i = 72; i < 74; i++) {
